WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
40456
[chromium] Skia mispaints pages with border-radius
https://bugs.webkit.org/show_bug.cgi?id=40456
Summary
[chromium] Skia mispaints pages with border-radius
James Robinson
Reported
2010-06-10 17:44:56 PDT
[chromium] Skia mispaints pages with border-radius
Attachments
Patch
(44.01 KB, patch)
2010-06-10 18:19 PDT
,
James Robinson
no flags
Details
Formatted Diff
Diff
Patch
(43.40 KB, patch)
2010-06-10 19:21 PDT
,
James Robinson
dglazkov
: review+
Details
Formatted Diff
Diff
Show Obsolete
(1)
View All
Add attachment
proposed patch, testcase, etc.
James Robinson
Comment 1
2010-06-10 18:05:52 PDT
http://code.google.com/p/chromium/issues/detail?id=37520
James Robinson
Comment 2
2010-06-10 18:19:58 PDT
Created
attachment 58430
[details]
Patch
James Robinson
Comment 3
2010-06-10 18:23:34 PDT
I'll take care of the chromium mac/win pixel baselines before landing (add a suppression in the test-expectations file and then pull from the canaries) but didn't want to add that now to avoid unnecessary merge conflicts. I'm not entirely in love with the name cloneInheritedProperties() but couldn't think of a better name for what the function does. Suggestions welcome!
Adam Langley
Comment 4
2010-06-10 18:35:27 PDT
LGTM
Adam Barth
Comment 5
2010-06-10 18:42:37 PDT
You have two WebCore ChangeLog entries.
James Robinson
Comment 6
2010-06-10 19:20:22 PDT
Yup...I sure do. Fixing.
James Robinson
Comment 7
2010-06-10 19:21:29 PDT
Created
attachment 58436
[details]
Patch
Dimitri Glazkov (Google)
Comment 8
2010-06-10 21:37:43 PDT
Comment on
attachment 58436
[details]
Patch That's a gorgeous find. Thanks Jamesr.
James Robinson
Comment 9
2010-06-11 14:08:39 PDT
Committed
r61037
: <
http://trac.webkit.org/changeset/61037
>
WebKit Review Bot
Comment 10
2010-06-11 14:27:49 PDT
http://trac.webkit.org/changeset/61037
might have broken GTK Linux 32-bit Release and GTK Linux 64-bit Release
James Robinson
Comment 11
2010-06-11 15:08:58 PDT
Committed
r61040
: <
http://trac.webkit.org/changeset/61040
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug